--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="page" lang="ru" xmlns="http://www.w3.org/1999/html">
+<html class="page" lang="ru" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -70,7 +70,7 @@
         </a>
         <a class="product-card__title-link" href="#">
           <h3 class="product-card__title">
-            Cat Energy&nbsp;<br class="product-card__mobile-wrap"> PRO&nbsp;<br class="product-card__tablet-wrap"> 500 г
+            Cat Energy&nbsp;<br class="product-card__mobile-break">PRO&nbsp;<br class="product-card__tablet-break">500 г
           </h3>
         </a>
         <dl class="product-card__properties-list">
@@ -105,18 +105,18 @@
       </article>
       <article class="main-products__item product-card">
         <a class="product-card__image-link" href="#">
-            <picture>
-              <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/catalog-2-desktop.webp 1x, img/catalog/catalog-2-desktop-2x.webp 2x">
-              <source media="(min-width: 1440px)" srcset="img/catalog/catalog-2-desktop.png 1x, img/catalog/catalog-2-desktop-2x.png 2x">
-              <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/catalog-2-tablet.webp 1x, img/catalog/catalog-2-tablet-2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="img/catalog/catalog-2-tablet.png 1x, img/catalog/catalog-2-tablet-2x.png 2x">
-              <source type="image/webp" srcset="img/catalog/catalog-2-mobile.webp 1x, img/catalog/catalog-2-mobile-2x.webp 2x">
-              <img class="product-card__image" src="img/catalog/catalog-2-mobile.png" srcset="img/catalog/catalog-2-mobile-2x.png 2x" width="140" height="112" alt="">
-            </picture>
-          </a>
+          <picture>
+            <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/catalog-2-desktop.webp 1x, img/catalog/catalog-2-desktop-2x.webp 2x">
+            <source media="(min-width: 1440px)" srcset="img/catalog/catalog-2-desktop.png 1x, img/catalog/catalog-2-desktop-2x.png 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/catalog-2-tablet.webp 1x, img/catalog/catalog-2-tablet-2x.webp 2x">
+            <source media="(min-width: 768px)" srcset="img/catalog/catalog-2-tablet.png 1x, img/catalog/catalog-2-tablet-2x.png 2x">
+            <source type="image/webp" srcset="img/catalog/catalog-2-mobile.webp 1x, img/catalog/catalog-2-mobile-2x.webp 2x">
+            <img class="product-card__image" src="img/catalog/catalog-2-mobile.png" srcset="img/catalog/catalog-2-mobile-2x.png 2x" width="140" height="112" alt="">
+          </picture>
+        </a>
         <a class="product-card__title-link" href="#">
           <h3 class="product-card__title">
-            Cat Energy&nbsp;<br class="product-card__mobile-wrap"> PRO&nbsp;<br class="product-card__tablet-wrap">1000 г
+            Cat Energy&nbsp;<br class="product-card__mobile-break">PRO&nbsp;<br class="product-card__tablet-break">1000 г
           </h3>
         </a>
         <dl class="product-card__properties-list">
@@ -148,21 +148,21 @@
         <a class="product-card__button button" href="#">
           Заказать
         </a>
-        </article>
+      </article>
       <article class="main-products__item product-card">
         <a class="product-card__image-link" href="#">
-            <picture>
-              <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/catalog-3-desktop.webp 1x, img/catalog/catalog-3-desktop-2x.webp 2x">
-              <source media="(min-width: 1440px)" srcset="img/catalog/catalog-3-desktop.png 1x, img/catalog/catalog-3-desktop-2x.png 2x">
-              <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/catalog-3-tablet.webp 1x, img/catalog/catalog-3-tablet-2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="img/catalog/catalog-3-tablet.png 1x, img/catalog/catalog-3-tablet-2x.png 2x">
-              <source type="image/webp" srcset="img/catalog/catalog-3-mobile.webp 1x, img/catalog/catalog-3-mobile-2x.webp 2x">
-              <img class="product-card__image" src="img/catalog/catalog-3-mobile.png" srcset="img/catalog/catalog-3-mobile-2x.png 2x" width="140" height="112" alt="">
-            </picture>
-          </a>
+          <picture>
+            <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/catalog-3-desktop.webp 1x, img/catalog/catalog-3-desktop-2x.webp 2x">
+            <source media="(min-width: 1440px)" srcset="img/catalog/catalog-3-desktop.png 1x, img/catalog/catalog-3-desktop-2x.png 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/catalog-3-tablet.webp 1x, img/catalog/catalog-3-tablet-2x.webp 2x">
+            <source media="(min-width: 768px)" srcset="img/catalog/catalog-3-tablet.png 1x, img/catalog/catalog-3-tablet-2x.png 2x">
+            <source type="image/webp" srcset="img/catalog/catalog-3-mobile.webp 1x, img/catalog/catalog-3-mobile-2x.webp 2x">
+            <img class="product-card__image" src="img/catalog/catalog-3-mobile.png" srcset="img/catalog/catalog-3-mobile-2x.png 2x" width="140" height="112" alt="">
+          </picture>
+        </a>
         <a class="product-card__title-link" href="#">
           <h3 class="product-card__title">
-            Cat Energy&nbsp;<br class="product-card__mobile-wrap"> PRO&nbsp;<br class="product-card__tablet-wrap">500 г
+            Cat Energy&nbsp;<br class="product-card__mobile-break">PRO&nbsp;<br class="product-card__tablet-break">500 г
           </h3>
         </a>
         <dl class="product-card__properties-list">
@@ -208,7 +208,7 @@
         </a>
         <a class="product-card__title-link" href="#">
           <h3 class="product-card__title">
-            Cat Energy&nbsp;<br class="product-card__mobile-wrap"> PRO&nbsp;<br class="product-card__tablet-wrap">1000 г
+            Cat Energy&nbsp;<br class="product-card__mobile-break">PRO&nbsp;<br class="product-card__tablet-break">1000 г
           </h3>
         </a>
         <dl class="product-card__properties-list">
@@ -254,7 +254,7 @@
         </a>
         <a class="product-card__title-link" href="#">
           <h3 class="product-card__title">
-            Cat Energy&nbsp;<br class="product-card__mobile-wrap"> slim&nbsp;<br class="product-card__tablet-wrap">500 г
+            Cat Energy&nbsp;<br class="product-card__mobile-break">slim&nbsp;<br class="product-card__tablet-break">500 г
           </h3>
         </a>
         <dl class="product-card__properties-list">
@@ -300,7 +300,7 @@
         </a>
         <a class="product-card__title-link" href="#">
           <h3 class="product-card__title">
-            Cat Energy&nbsp;<br class="product-card__mobile-wrap"> slim&nbsp;<br class="product-card__tablet-wrap">1000 г
+            Cat Energy&nbsp;<br class="product-card__mobile-break">slim&nbsp;<br class="product-card__tablet-break">1000 г
           </h3>
         </a>
         <dl class="product-card__properties-list">
@@ -346,7 +346,7 @@
         </a>
         <a class="product-card__title-link" href="#">
           <h3 class="product-card__title">
-            Cat Energy&nbsp;<br class="product-card__mobile-wrap"> slim&nbsp;<br class="product-card__tablet-wrap">500 г
+            Cat Energy&nbsp;<br class="product-card__mobile-break">slim&nbsp;<br class="product-card__tablet-break">500 г
           </h3>
         </a>
         <dl class="product-card__properties-list">
@@ -475,7 +475,7 @@
       </div>
       <div class="additional-products__gift">
         <p class="additional-products__gift-paragraph">
-          Закажите все <br class="additional-products__mobile-wrap"> и получите чехол для кота в подарок!
+          Закажите все<br class="additional-products__mobile-break">и получите чехол для кота в подарок!
         </p>
       </div>
     </div>
@@ -487,7 +487,7 @@
     <div class="location__container">
       <div class="location__wrapper container">
         <p class="location__invitation">
-          Приглашаем<br class="location__mobile-wrap"> к сотрудничеству дилеров!
+          Приглашаем<br class="location__mobile-break">к сотрудничеству дилеров!
         </p>
         <address class="location__address address-text">
           <p class="address-text__paragraph">
@@ -499,9 +499,7 @@
         </address>
       </div>
     </div>
-    <iframe class="location__map"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036257197866!2d30.320472476852885!3d59.93871916209409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20191186!5e0!3m2!1sen!2sru!4v1671792798573!5m2!1sen!2sru"
-            width="320" height="362" allowfullscreen title="Карта расположения Cat Energy"></iframe>
+    <iframe class="location__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036257197866!2d30.320472476852885!3d59.93871916209409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20191186!5e0!3m2!1sen!2sru!4v1671792798573!5m2!1sen!2sru" width="320" height="362" allowfullscreen title="Карта расположения Cat Energy"></iframe>
   </section>
 </main>
 <footer class="page-footer">
