--- a/source/form.html
+++ b/source/form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="page" lang="ru" xmlns="http://www.w3.org/1999/html">
+<html class="page" lang="ru" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,7 +29,7 @@
     </button>
   </div>
   <nav class="main-header__nav main-header__nav--closed main-header__nav--nojs">
-  <ul class="main-header__list navigation-list">
+    <ul class="main-header__list navigation-list">
       <li class="navigation-list__item">
         <a class="navigation-list__link" href="index.html">
           Главная
@@ -54,7 +54,7 @@
       Подбор программы
     </h1>
     <p class="application-form__paragraph container-form">
-      Заполните анкету, и мы подберем&nbsp;<br class="application-form__mobile-wrap"> программу питания для вашего кота
+      Заполните анкету, и мы подберем&nbsp;<br class="application-form__mobile-break">программу питания для вашего кота
     </p>
     <form class="application-form__form" action="https://echo.htmlacademy.ru/" method="post">
       <div class="application-form__wrapper">
@@ -195,7 +195,7 @@
     <div class="location__container">
       <div class="location__wrapper container">
         <p class="location__invitation">
-          Приглашаем <br class="location__mobile-wrap"> к сотрудничеству дилеров!
+          Приглашаем<br class="location__mobile-break">к сотрудничеству дилеров!
         </p>
         <address class="location__address address-text">
           <p class="address-text__paragraph">
@@ -207,9 +207,7 @@
         </address>
       </div>
     </div>
-    <iframe class="location__map"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036257197866!2d30.320472476852885!3d59.93871916209409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20191186!5e0!3m2!1sen!2sru!4v1671792798573!5m2!1sen!2sru"
-            width="320" height="362" allowfullscreen title="Карта расположения Cat Energy"></iframe>
+    <iframe class="location__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036257197866!2d30.320472476852885!3d59.93871916209409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20191186!5e0!3m2!1sen!2sru!4v1671792798573!5m2!1sen!2sru" width="320" height="362" allowfullscreen title="Карта расположения Cat Energy"></iframe>
   </section>
 </main>
 <footer class="page-footer">
