--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="page" lang="ru" xmlns="http://www.w3.org/1999/html">
+<html class="page" lang="ru" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -126,7 +126,7 @@
       </li>
       <li class="principles-of-work__item">
         <p class="principles-of-work__description principles-of-work__description--period">
-          Уже через месяц наслаждайтесь изменениями к лучшему&nbsp;<br class="principles-of-work__tablet-wrap">вашего питомца!
+          Уже через месяц наслаждайтесь изменениями к лучшему&nbsp;<br class="principles-of-work__tablet-break">вашего питомца!
         </p>
       </li>
     </ul>
@@ -182,7 +182,7 @@
             <source type="image/webp" media="(min-width: 768px)" srcset="img/after-desktop-1x.webp 1x, img/after-desktop-2x.webp 2x">
             <source media="(min-width: 768px)" srcset="img/after-desktop-1x.png 1x, img/after-desktop-2x.png 2x">
             <source type="image/webp" srcset="img/after-mobile-1x.webp 1x, img/after-mobile-2x.webp 2x">
-            <img class="before-after__image-after" src="img/after-mobile-1x.png" srcset="img/after-mobile-2x.png" width="280" height="256" alt="Фото кота после питания кормом cat-energy, теперь он выглядит более стройным"  loading="lazy">
+            <img class="before-after__image-after" src="img/after-mobile-1x.png" srcset="img/after-mobile-2x.png" width="280" height="256" alt="Фото кота после питания кормом cat-energy, теперь он выглядит более стройным" loading="lazy">
           </picture>
         </div>
         <div class="before-after__toggle">
@@ -200,7 +200,7 @@
     <div class="location__container">
       <div class="location__wrapper location__wrapper--index container">
         <p class="location__invitation">
-          Приглашаем<br class="location__mobile-wrap"> к сотрудничеству дилеров!
+          Приглашаем<br class="location__mobile-break">к сотрудничеству дилеров!
         </p>
         <address class="location__address address-text">
           <p class="address-text__paragraph">
@@ -212,9 +212,7 @@
         </address>
       </div>
     </div>
-    <iframe class="location__map"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036257197866!2d30.320472476852885!3d59.93871916209409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20191186!5e0!3m2!1sen!2sru!4v1671792798573!5m2!1sen!2sru"
-            width="320" height="362" allowfullscreen title="Карта расположения Cat Energy"></iframe>
+    <iframe class="location__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036257197866!2d30.320472476852885!3d59.93871916209409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20191186!5e0!3m2!1sen!2sru!4v1671792798573!5m2!1sen!2sru" width="320" height="362" allowfullscreen title="Карта расположения Cat Energy"></iframe>
   </section>
 </main>
 <footer class="page-footer">
